--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /ejercicio03/EjerciciosPolimorfismoDos/build/
 /ejercicio03/EjerciciosPolimorfismoDos/nbproject/private/
+/ejercicio02/EjercicioRepasoPolimorfismo/dist/
